[gd_scene format=3 uid="uid://b33yhwxamtj01"]

[ext_resource type="Theme" uid="uid://bg3hae0xognpj" path="res://Main Menu/main_theme.tres" id="1_ng0yx"]
[ext_resource type="Script" uid="uid://dctemmefynke2" path="res://Main Menu/main_menu.gd" id="2_fxvm1"]

[node name="MainMenu" type="Control" unique_id=1266837766]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ng0yx")
script = ExtResource("2_fxvm1")

[node name="MainScreen" type="PanelContainer" parent="." unique_id=1789804037]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="MainScreen" unique_id=1028757743]
layout_mode = 2
color = Color(0.7102779, 0.71027905, 0.71027833, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="MainScreen" unique_id=348397254]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 2

[node name="SpacingContainer" type="Container" parent="MainScreen/VBoxContainer" unique_id=158278599]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="MainScreen/VBoxContainer" unique_id=646253765]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 150
bbcode_enabled = true
text = "[shake rate=15.0 level=20 connected=1][outline_size=6][color=green]Germaphobe[/color][/outline_size][/shake]"
fit_content = true
horizontal_alignment = 1

[node name="SpacingContainer2" type="Container" parent="MainScreen/VBoxContainer" unique_id=1974794001]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MainScreen/VBoxContainer" unique_id=952575811]
layout_mode = 2
alignment = 1

[node name="PlayGameButton" type="Button" parent="MainScreen/VBoxContainer/HBoxContainer" unique_id=1516124939]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
text = "Play Game"

[node name="SpacingContainer3" type="Container" parent="MainScreen/VBoxContainer/HBoxContainer" unique_id=1533410981]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2

[node name="CreditsButton" type="Button" parent="MainScreen/VBoxContainer/HBoxContainer" unique_id=1033108642]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
text = "Credits"

[node name="SpacingContainer3" type="Container" parent="MainScreen/VBoxContainer" unique_id=872333075]
custom_minimum_size = Vector2(0, 319.91)
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MainScreen/VBoxContainer" unique_id=1156261600]
layout_mode = 2

[node name="ControlInstructions" type="RichTextLabel" parent="MainScreen/VBoxContainer/HBoxContainer2" unique_id=492558712]
custom_minimum_size = Vector2(527, 168)
layout_mode = 2
bbcode_enabled = true
text = "[color=purple]Control the mask[br] using A + D[br] or arrow keys[/color]"
scroll_active = false
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="SpacingContainer4" type="Container" parent="MainScreen/VBoxContainer/HBoxContainer2" unique_id=385316588]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="BouncePills" type="RichTextLabel" parent="MainScreen/VBoxContainer/HBoxContainer2" unique_id=851084035]
custom_minimum_size = Vector2(527, 168)
layout_mode = 2
bbcode_enabled = true
text = "[color=purple]Bounce the pill[br]to defeat the germs[/color]"
scroll_active = false
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="SpacingContainer5" type="Container" parent="MainScreen/VBoxContainer/HBoxContainer2" unique_id=1509686409]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="ControlInstructions3" type="RichTextLabel" parent="MainScreen/VBoxContainer/HBoxContainer2" unique_id=1884770192]
custom_minimum_size = Vector2(527, 168)
layout_mode = 2
bbcode_enabled = true
text = "[color=purple]Sneeze to restore a damaged mask [/color]"
scroll_active = false
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="CreditsMenu" type="Control" parent="." unique_id=1267823812]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CreditsMenu" unique_id=709568886]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.001
anchor_bottom = 1.0
offset_left = 1.0
offset_right = -0.92004395
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="CreditsMenu/PanelContainer" unique_id=1271376466]
layout_mode = 2
color = Color(0.15686275, 0.15686275, 0.15686275, 0.9764706)

[node name="VBoxContainer" type="VBoxContainer" parent="CreditsMenu/PanelContainer" unique_id=526293046]
layout_mode = 2

[node name="Title" type="RichTextLabel" parent="CreditsMenu/PanelContainer/VBoxContainer" unique_id=230255593]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 220
text = "Credits"
fit_content = true
horizontal_alignment = 1

[node name="Container" type="Container" parent="CreditsMenu/PanelContainer/VBoxContainer" unique_id=1418865808]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2

[node name="GameDesign" type="RichTextLabel" parent="CreditsMenu/PanelContainer/VBoxContainer" unique_id=1872689825]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 64
bbcode_enabled = true
text = "[shake rate=15.0 level=20 connected=1][outline_size=6][color=green]Game Design, Programming: [/color][/outline_size][/shake] [br] Isabel Konty, Anton Erce"
fit_content = true
horizontal_alignment = 1

[node name="Art" type="RichTextLabel" parent="CreditsMenu/PanelContainer/VBoxContainer" unique_id=319463854]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 64
bbcode_enabled = true
text = "[shake rate=15.0 level=20 connected=1][outline_size=6][color=green]Art: [/color][/outline_size][/shake] [br]Naomi Shumway"
fit_content = true
horizontal_alignment = 1

[node name="UI" type="RichTextLabel" parent="CreditsMenu/PanelContainer/VBoxContainer" unique_id=727074055]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 64
bbcode_enabled = true
text = "[shake rate=15.0 level=20 connected=1][outline_size=6][color=green]UI Design:[/color][/outline_size][/shake] [br]Anton Erce"
fit_content = true
horizontal_alignment = 1

[node name="Sound" type="RichTextLabel" parent="CreditsMenu/PanelContainer/VBoxContainer" unique_id=1485745829]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 64
bbcode_enabled = true
text = "[shake rate=15.0 level=20 connected=1][outline_size=6][color=green]Sound:[/color][/outline_size][/shake] [br]??? Hellen keller apparently ???"
fit_content = true
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="CreditsMenu" unique_id=1238139727]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.43500003
anchor_top = 0.87500006
anchor_right = 0.56200004
anchor_bottom = 0.93200004
offset_left = 0.79992676
offset_top = -6.1035156e-05
offset_right = -0.040039063
offset_bottom = 0.4399414
text = "Back"
